<resources>
    <string name="app_name">Lab1</string>
    <string name="hello_message">Hello World!</string>
    <string name="ButtonText">I\’m a button</string>
    <string name="title_activity_login">LoginActivity</string>

    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="loginName">login name</string>

    <string name="checkBox">CheckBox</string>
    <string name="enableSomething">Enable Something</string>
    <string name="radioButton">RadioButton</string>
    <string name="wrap_content">Wrap Content</string>
    <string name="login_button">Login</string>

    <string name="dialog_message">Do you want to terminate the activity?</string>
    <string name="dialog_title">Finish</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>

    <string name="startChat">Start Chat</string>
    <string name="weatherButton">Weather Forecast</string>

    <string name="menu_item1">Menu 1</string>
    <string name="menu_item3">Menu 3</string>
    <string name="menu_item2">Menu 2</string>
    <string name="menu_item4">Menu 4</string>

    <string name="newMessage">New Message</string>
    <string name="newMessageHint">New Message Hint</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_test_toolbar">TestToolbar</string>

    <!--<string name="title_content_login">Login</string>-->
    <!--<string name="enable_Something">Enable Something</string>-->
</resources>