<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
android:id="@+id/content_login"
android:layout_width="match_parent"
android:layout_height="match_parent"
android:paddingBottom="@dimen/activity_vertical_margin"
android:paddingLeft="@dimen/activity_horizontal_margin"
android:paddingRight="@dimen/activity_horizontal_margin"
android:paddingTop="@dimen/activity_vertical_margin"
app:layout_behavior="@string/appbar_scrolling_view_behavior"
tools:context="com.example.student.andoid.LoginActivity"
tools:showIn="@layout/activity_login"

android:orientation="vertical">

<TextView
    android:text="@string/login"
    android:layout_width="match_parent"
    android:layout_height="wrap_content" />
<EditText
    android:text="@string/login"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/emailField"
    android:hint="@string/loginName"
    android:inputType="textEmailAddress" />
<TextView
    android:text="@string/password"
    android:layout_width="match_parent"
    android:layout_height="wrap_content" />
<EditText
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:inputType="textPassword"
    android:text="@string/password"
    android:ems="10"
    android:id="@+id/editText" />

<Button
    android:text="@string/login_button"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/button2" />

</LinearLayout>
